# dotflow-server

./: .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  routers.py
app/api/v1/endpoints/: task.py  workflow.py
zeromq/: client.py  server.py
